<?xml version="1.0"?>
<package format="3">
  <name>tracker</name>
  <version>0.0.0</version>
  <description>Pure Pursuit tracker for microswarm robots</description>
  <maintainer email="0217aaa@g.skku.edu">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
